# uoscore-uedhoc

./: .gitignore  .gitmodules  COPYRIGHT.MD  Makefile  README.MD  change_log.md  edhoc-vectors-json_v11.txt  edhoc_internal.h  makefile_config.mk  oscore.h  package.json
.github/workflows/: ci.yml
cddl_models/: edhoc_cose.cddl  edhoc_info.cddl  edhoc_message_1.cddl  edhoc_message_4.cddl  edhoc_message_error.cddl  edhoc_plaintext.cddl  edhoc_th.cddl  oscore_enc_structure.cddl
inc/: edhoc.h  edhoc_internal.h  oscore.h
inc/cbor/: edhoc_decode_bstr_type.h  edhoc_decode_bstr_type_types.h  edhoc_decode_cert.h  edhoc_decode_cert_types.h  edhoc_decode_id_cred_x.h  edhoc_decode_id_cred_x_types.h  edhoc_decode_message_1.h  edhoc_decode_message_1_types.h  edhoc_decode_message_2.h  edhoc_decode_message_2_types.h  edhoc_decode_message_3.h  edhoc_decode_message_3_types.h  edhoc_decode_plaintext.h  edhoc_decode_plaintext_types.h  edhoc_encode_bstr_type.h  edhoc_encode_bstr_type_types.h  edhoc_encode_data_2.h  edhoc_encode_data_2_types.h  edhoc_encode_enc_structure.h  edhoc_encode_enc_structure_types.h  edhoc_encode_id_cred_x.h  edhoc_encode_id_cred_x_types.h  edhoc_encode_info.h  edhoc_encode_info_types.h  edhoc_encode_int_type.h  edhoc_encode_int_type_types.h  edhoc_encode_message_1.h  edhoc_encode_message_1_types.h  edhoc_encode_message_2.h  edhoc_encode_message_2_types.h  edhoc_encode_message_3.h  edhoc_encode_message_3_types.h  edhoc_encode_message_error.h  edhoc_encode_message_error_types.h  edhoc_encode_sig_structure.h  edhoc_encode_sig_structure_types.h  edhoc_encode_th2.h  edhoc_encode_th2_types.h  edhoc_encode_th3.h  edhoc_encode_th3_types.h  (+8 more)
inc/common/: crypto_wrapper.h  memcpy_s.h  print_util.h
inc/edhoc/: associated_data_encode.h  c_x.h  cert.h  ciphertext.h  edhoc_method_type.h  hkdf_info.h  messages.h  okm.h  plaintext.h  prk.h  retrieve_cred.h  runtime_context.h  signature_or_mac_msg.h  suites.h  th.h  txrx_wrapper.h
inc/oscore/: aad.h  coap.h  nonce.h  option.h  oscore_coap.h  oscore_cose.h  oscore_hkdf_info.h  security_context.h  supported_algorithm.h
modules/edhoc/: CMakeLists.txt  edhoc.h  edhoc_internal.h
modules/edhoc/cbor/: cert.cddl  cose.cddl  d_message_1.c  d_message_1.h  d_message_2.c  d_message_2.h  d_message_2_c_i.c  d_message_2_c_i.h  data_2.cddl  decode_bstr_type.c  decode_bstr_type.h  decode_bstr_type_types.h  decode_cert.c  decode_cert.h  decode_cert_types.h  decode_id_cred_x.c  decode_id_cred_x.h  decode_id_cred_x_types.h  decode_message_1.c  decode_message_1.h  decode_message_1_types.h  decode_message_2.c  decode_message_2.h  decode_message_2_c_i.c  decode_message_2_c_i.h  decode_message_2_types.h  decode_message_3.c  decode_message_3.h  decode_message_3_types.h  decode_plaintext.c  decode_plaintext.h  decode_plaintext_types.h  e_message_1.c  e_message_1.h  enc_structure.c  encode_bstr_type.c  encode_bstr_type.h  encode_bstr_type_types.h  encode_data_2.c  encode_data_2.h  (+99 more)
modules/edhoc/inc/: a_Xae_encode.h  associated_data_encode.h  byte_array.h  c_x.h  cbor_decoder.h  cert.h  ciphertext.h  cose.h  crypto_wrapper.h  edhoc_method_type.h  err_msg.h  error.h  hkdf_info.h  memcpy_s.h  messages.h  okm.h  plaintext.h  print_util.h  prk.h  retrieve_cred.h  runtime_context.h  signature_or_mac_msg.h  suites.h  th.h  txrx_wrapper.h
modules/edhoc/src/: a_Xae_encode.c  associated_data_encode.c  byte_array.c  c_x.c  cbor_decoder.c  cert.c  ciphertext.c  cose.c  crypto_wrapper.c  edhoc_exporter.c  edhoc_method_type.c  err_msg.c  hkdf_info.c  initiator.c  memcpy_s.c  okm.c  plaintext.c  plaintext_decode.c  plaintext_encode.c  print_util.c  prk.c  responder.c  retrieve_cred.c  runtime_context.c  signature_or_mac_msg.c  suites.c  th.c
modules/oscore/: CMakeLists.txt  oscore.h
modules/oscore/cbor/: aad_array.c  aad_array.cddl  aad_array.h  aad_array_types.h  enc_structure.c  enc_structure.h  enc_structure_types.h  gen.sh  info.c  info.cddl  info.h  info_types.h  types_aad_array.h  types_enc_structure.h  types_info.h
modules/oscore/inc/: aad.h  byte_array.h  coap.h  crypto_wrapper.h  error.h  hkdf_info.h  info_encode.h  memcpy_s.h  nonce.h  option.h  oscore_cose.h  oscore_hkdf_info.h  print_util.h  security_context.h  supported_algorithm.h  types_info_encode.h
modules/oscore/src/: aad.c  byte_array.c  coap.c  coap2oscore.c  crypto_wrapper.c  hkdf_info.c  info_encode.c  memcpy_s.c  nonce.c  option.c  oscore.cddl  oscore2coap.c  oscore_cose.c  osocre_hkdf_info.c  print_util.c  security_context.c
samples/cert_hierarchy/: generate_ca_hierarchy.sh  generate_test_vec_inputs.py  intermediate_ca.cnf  readme.md  root_ca.cnf
samples/common/: edhoc-vectors-json_v11.txt  sock.c  sock.h  test_vec_parser.c  test_vec_parser.h
samples/edhoc_device/: README.MD
samples/edhoc_device/responder/: CMakeLists.txt
samples/edhoc_device/responder/src/: credentials.c  credentials.h  credentials_select.h  main.c
samples/edhoc_linux/: README.MD
scripts/: cddl2c.sh  json2c.py
src/cbor/: edhoc_decode_bstr_type.c  edhoc_decode_cert.c  edhoc_decode_id_cred_x.c  edhoc_decode_message_1.c  edhoc_decode_message_2.c  edhoc_decode_message_3.c  edhoc_decode_plaintext.c  edhoc_encode_bstr_type.c  edhoc_encode_data_2.c  edhoc_encode_enc_structure.c  edhoc_encode_id_cred_x.c  edhoc_encode_info.c  edhoc_encode_int_type.c  edhoc_encode_message_1.c  edhoc_encode_message_2.c  edhoc_encode_message_3.c  edhoc_encode_message_error.c  edhoc_encode_sig_structure.c  edhoc_encode_th2.c  edhoc_encode_th3.c  oscore_info.c  (+3 more)
test/: CMakeLists.txt  README.MD  entropy.c  main.c  prj.conf  run.py
test/build_lib_test/: opt
test/edhoc_testvector_tests/: edhoc_tests.c  edhoc_tests.h  txrx_wrapper.c  txrx_wrapper.h
test/lib_test/: Makefile  makefile_config.mk
test/oscore_testvector_tests/: oscore_tests.c  oscore_tests.h  test_vectors_oscore.c  test_vectors_oscore.h
test/src/: edhoc_tests.c  main.c  main.h  test_vectors_edhoc.c  test_vectors_edhoc.h  test_vectors_oscore.c  test_vectors_oscore.h  txrx_wrapper.c  txrx_wrapper.h
test_vectors/: edhoc-vectors-json_v11.txt  json2c.py  test_vectors.h
(+112 files in other folders)
